# ThirdMessage

./: .gitignore  LICENSE  localhost.crt
ThirdMessage.APIBridge/: pom.xml
ThirdMessage.APIBridge/src/main/java/: APIBridge.java  ClientManager.java  Main.java  SignalRClient.java
ThirdMessage.APIBridge/src/main/java/models/: ReceiveMessageModel.java  ReplyModel.java
ThirdMessage.APIBridge/src/main/java/utils/: SSLUtils.java
ThirdMessage.ServierAPI/: ThirdMessage.ServierAPI.slnx
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/: Program.cs  ThirdMessage.ServierAPI.csproj  ThirdMessage.ServierAPI.http  WeatherForecast.cs  appsettings.json
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Controllers/: FriendController.cs  LoginController.cs  MessageController.cs  UserController.cs  WeatherForecastController.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Database/: ApplicationDbContext.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Database/EntityConfigs/: FriendEntityConfig.cs  MessageEntityConfig.cs  UserEntityConfig.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Database/Entitys/: FriendEntity.cs  FriendEntityl.cs  MessageEntity.cs  UserEntity.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Helper/: JsonHelper.cs  TimeHelper.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Hubs/: ChatHub.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Migrations/: 20251124075001_InitialCreate.Designer.cs  20251124075001_InitialCreate.cs  20251125042719_InitialCreate.Designer.cs  20251125103731_InitialCreate.Designer.cs  20251125103731_InitialCreate.cs  20251126122801_InitialCreate.Designer.cs  20251126122801_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Models/: EmptyModel.cs  FriendModel.cs  LoginModel.cs  MessageModel.cs  ReplyModel.cs  UserModel.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Models/LoginModels/: LoginModel.cs  LoginReplyModel.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Models/ReplyModels/: FriendReplyModel.cs  LoginReplyModel.cs  MessageReplyModel.cs  ReplyModel.cs
ThirdMessage.ServierAPI/ThirdMessage.ServierAPI/Services/: SignalRBridgeService.cs
ThirdMessage.UI/ThirdMessageUI/: CMakeLists.txt  config.ini  icon.rc  main.cpp
ThirdMessage.UI/ThirdMessageUI/Helpers/: JsonHelper.hpp  frameless_helper.cpp  frameless_helper.h
ThirdMessage.UI/ThirdMessageUI/Image/: image.qrc
ThirdMessage.UI/ThirdMessageUI/MessageServices/: message_service.cpp  message_service.h  network_service.cpp  network_service.h  networkservice.cpp  networkservice.h  websocket_service.cpp  websocket_service.h
ThirdMessage.UI/ThirdMessageUI/Models/: LoginModel.cpp  friend_listmodel.cpp  friend_listmodel.h  friend_model.cpp  friend_model.h  login_model.cpp  login_model.h  message_listmodel.cpp  message_listmodel.h  message_model.cpp  message_model.h
ThirdMessage.UI/ThirdMessageUI/ViewModels/: LoginVIewModel.cpp  LoginVIewModel.h  MainViewModel.cpp  MainViewModel.h  login_viewmodel.cpp  login_viewmodel.h  main_viewmodel.cpp  main_viewmodel.h
ThirdMessage.UI/ThirdMessageUI/qml/: LoginWindow.qml  Main.qml
ThirdMessage.UI/ThirdMessageUI/qml/controls/: AppTitleBar.qml  AppWindow.qml  FriendListItem.qml  FriendSearchEdit.qml  MessageListItem.qml  SendButton.qml  TitleBarButton.qml
